--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1,5 +1,4 @@
-.radio-container {
-	svg:nth-of-type(2){
-		top: -20px;
-	}
+_::-webkit-full-page-media, _:future, :root .radio-container svg:nth-of-type(2){
 }
+
+.radio-container label { display: block; }
